# tardigrade-micromorphic-elasto-plasticity

./: .gitignore  .gitlab-ci.yml  BUILD.sh  CMakeLists.txt  INSTALL.sh  ReadMe.mk  TEST.sh  build_docs.sh  config.mk  environment.txt  new_build.sh
configuration_files/: environment.yaml
docs/html/: index.html
docs/sphinx/: CMakeLists.txt  api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  gitlab_setup.rst  release_philosophy.rst  targets.txt  user.rst
modulefiles/: micromorphic_elasto_plasticity-env  tardigrade_micromorphic_elasto_plasticity-env
modulfiles/: micromorphic_elasto_plasticity-env
recipe/: meta.yaml
src/cpp/: CMakeLists.txt  micromorphic_elasto_plasticity.cpp  micromorphic_elasto_plasticity.h  tardigrade_micromorphic_elasto_plasticity.cpp  tardigrade_micromorphic_elasto_plasticity.h
src/cpp/tests/: CMakeLists.txt  test_micromorphic_elasto_plasticity.cpp  test_tardigrade_micromorphic_elasto_plasticity.cpp
src/cpp/tests/micromorphic_elasto_plasticity/: .gitignore  makefile  test_micromorphic_elasto_plasticity.cpp
src/python/: parameter_test.py
